# Local-Geometric-Consensus-Examples

./: .gitignore  README.md  compileAll.sh  readme.txt
applications/: CMakeLists.txt  augmentingDrawings.cpp  textureTracking.cpp
cameraParameters/: IPAD_air_video.xml  logitechC270.xml
examples/: CMakeLists.txt  opencvexample.cpp  osgexample.cpp
io/: CMakeLists.txt  detectfromvideo.cpp  detectfromvideo.hpp  detector.cpp  detector.hpp  drawopencv.cpp  drawopencv.h  modelloader.cpp  modelloader.h
io/scaleddetector/: scaleddetector.cpp  scaleddetector.hpp
models/: demo.xml  osgexample.xml
src/include/: basictype.h  lgcmethod.hpp  matchinginterface.hpp  mathfuns.h  refiner.hpp
